# local-research-server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  research_server.py
examples/: claude_desktop_config.json  research_queries.md
tests/: test_research_server.py
