[project]
name = "local-research-server"
version = "1.0.0"
description = "A local MCP server for web research and content scraping"
authors = [
    { name = "Louise Robertson", email = "louise@unlockmcp.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "trafilatura>=1.12.0"
]

[project.urls]
Homepage = "https://github.com/Unlock-MCP/local-research-server"
Documentation = "https://unlockmcp.com/guides/build-local-research-mcp-server"
Repository = "https://github.com/Unlock-MCP/local-research-server"
Issues = "https://github.com/Unlock-MCP/local-research-server/issues"

[project.scripts]
research-server = "research_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0"
]